--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <main>
             <div class="container">
                 <div class="item">
-                    <div class="img-wrap"></div>
+                    <div class="img-wrap">
+                    </div>
                 </div>
                 <div class="item">
                     <div class="img-wrap"></div>
